# learn-nomad-cluster-setup

./: .gitignore  README.md  image.pkr.hcl  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars-example  terraform.tfvars.example  variables.tf
aws/: README.md  image.pkr.hcl  main.tf  outputs.tf  post-setup.sh  variables.hcl  variables.hcl.example  variables.tf  versions.tf
aws-dev/: image.pkr.hcl  output.txt  post-setup.sh  variables.hcl  variables.hcl.example  variables.tf
azure/: image.pkr.hcl  main.tf  outputs.tf  post-setup.sh  variables.hcl.example  variables.tf  versions.tf
data-scripts/: user-data-client.sh  user-data-server.sh
gcp/: image.pkr.hcl  main.tf  outputs.tf  post-setup.sh  variables.hcl.example  variables.tf  versions.tf
scaleway/: image.pkr.hcl  main.tf  outputs.tf  post-setup.sh  variables.hcl.example  variables.tf
shared/config/: consul-acl-nomad-auto-join.hcl  consul-systemd-resolved.conf  consul-template.hcl  consul.hcl  consul_client.hcl  consul_gce.service  nomad-acl-user.hcl  nomad.hcl  nomad_client.hcl
shared/data-scripts/: user-data-client.sh  user-data-server.sh
shared/files/: adaptrun  pyproject.toml
shared/scripts/: client.sh  server.sh  setup.sh
